n+1 nerf